# invoice-reminders

./: .env  .env.example  Dockerfile  LICENSE  README.md  invoices.db  pyproject.toml  render.yaml
app/: __init__.py  database.py  email_service.py  main.py  models.py  routes.py  scheduler.py  schemas.py  ui_routes.py
app/static/: exemple_import.csv
app/templates/: base.html  client_detail.html  client_form.html  clients.html  dashboard.html  import.html  invoice_detail.html  invoice_form.html  invoices.html  reminders.html
invoice_reminders.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
