[project]
name = "invoice-reminders"
version = "0.1.0"
description = "Relances automatiques de factures impayées - Email-only MVP"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pydantic",
    "python-dotenv",
    "apscheduler",
    "jinja2",
    "requests",
    "email-validator",
    "python-multipart"
]

[tool.uvicorn]
factory = false
